# fastapi-mongodb-example

./: Dockerfile  README.md  docker-compose.yml  pylintrc  pyproject.toml
fastapi_mongodb_example/: main.py
fastapi_mongodb_example/config/: mongodb.py  settings.py
fastapi_mongodb_example/endpoints/: user.py
fastapi_mongodb_example/models/: schemas.py  user.py
fastapi_mongodb_example/repositories/: repository.py  user_repository.py
fastapi_mongodb_example/services/: user_service.py
